--- a/style/style.css
+++ b/style/style.css
@@ -34,18 +34,51 @@ body {
     font-size: 20px;
 }
 
-.zeit {
-    background-color: #1b170a;
-    padding: 5px 10px;
+.grid {
+    display: grid;
+    width: 100;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 300px;
+    column-gap: 50px;
+    justify-content: center;
     margin-top: 30px;
+    color: rgb(46, 33, 14);
+}
+
+.grid h2 {
+    font-size: 25px;
+    color: rgb(46, 33, 14);
+}
+
+.grid div {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.beans {
+    background-color: #d6d1bea1;
+    background-image: url('../images/beans1.jpg');
+    background-position: center;
+    padding: 5px 10px;
     font-size: 18px;
+    border-radius: 10px;
+    width: 100%;
+}
+
+.zeit {
+    background-color: #d6d1bea1;
+    padding: 5px 10px;
+    font-size: 18px;
+    border-radius: 10px;
+    width: 100%;
 }
 
 .standort {
-    background-color: #1b170a;
-    margin-top: 10px;
+    background-color: #d6d1bea1;
     font-size: 18px;
-    padding: 5px 10px
+    padding: 5px 10px;
+    border-radius: 10px;
+    width: 100%;
 }
 
 #showcase .button {
