--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,7 @@ body {
 
 #showcase {
     background-image: url('../images/Kaffeerad_gauss.jpg');
+    font-family: 'Roboto', sans-serif;
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -85,7 +86,7 @@ body {
     background-color: #d6d1bea1;
     padding: 5px 10px;
     font-size: 12px;
-    width: 100
+    width: 100;
 }
 
 #showcase .button {
